@@ -1581,6 +1581,24 @@ classes: "accuracyForWarning" and "accuracyForException" are 1.0e-9 and
 
 <td></td>
 </tr>
+
+<tr>
+<td>vis-01-00-10</td>
+
+<td></td>
+
+<td></td>
+
+<td>Code Wizard fixes.</td>
+
+<td>John Al.</td>
+
+<td>990510</td>
+
+<td></td>
+
+<td></td>
+</tr>
 </table>
 
 <table BORDER WIDTH="100%" NOSAVE >
