@@ -1,4 +1,4 @@
-$Id: History,v 1.11 1999-04-28 14:09:10 johna Exp $
+$Id: History,v 1.12 1999-05-10 15:40:34 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+vis-01-00-10  10t May 1999  John Allison
+- Acted upon Code Wizard reports.  Mainly made destructors virtual.
 
 vis-01-00-09  28th April 1999  John Allison
 - Changes for UserAction classes.
